--- a/HTML/One-Pages/Lawyer/assets/css/custom.css
+++ b/HTML/One-Pages/Lawyer/assets/css/custom.css
@@ -1,1 +1,53 @@
 /* Add here all your css styles (customizations) */
+.g-theme-bg-color-1 { background: linear-gradient(rgba(32, 40, 43, .75),rgba(136, 140, 141, 1));}
+
+.arrow-section-block {
+	position: relative;
+	padding: 95px 50px 65px;
+	overflow: visible;
+}
+/*.arrow-section-img {
+	position: relative;
+}
+.arrow-section-img:after {
+	content: "";
+	background-color: rgba(78,67,83,.4);
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}*/
+
+.arrow-section-block:after {
+	content: " ";
+	display: block;
+	position: absolute;
+	left: 50%;
+	margin-left: -17px;
+	border-width: 17px;
+	border-style: solid;
+	border-right-color: transparent !important;
+	border-left-color: transparent !important;
+	z-index: 2;
+	border-color: #62676A;
+}
+
+.g-theme-bg-color-1 .arrow-section-block:after {
+	border-color: #62676A;
+}
+
+.arrow-section-block.arrow-top:after {
+	bottom: 100%;
+	border-top-color: transparent;
+}
+
+.arrow-section-block.arrow-bottom:after {
+	top: 100%;
+	border-bottom-color: transparent;
+}
+
+.arrow-section-block p {
+	font-size: 16px;
+	line-height: 26px;
+}
