--- a/HTML/One-Pages/Lawyer/assets/css/custom.css
+++ b/HTML/One-Pages/Lawyer/assets/css/custom.css
@@ -57,6 +57,10 @@
 	background-color: transparent;
 	color: #eee;
 }
+#benefits-description
+{
+	margin-bottom: 15px;
+}
 .panel.panel-default
 {
 	background-color: transparent;
@@ -64,12 +68,56 @@
 
 }
 
-.panel-default > .panel-heading {
+.panel-default > .panel-heading
+{
     background-color:transparent;
 
 }
+
+.panel-default > .panel-heading
+{
+    background-color:transparent;
+
+}
+.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading
+{
+	display: inline-block;
+	position: relative;
+	padding-bottom: 5px;
+}
+
 .panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading+.panel-collapse>.panel-body
 {
-	border-width: 0px;
 	border: none;
+}
+
+.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading:after {
+	content: '';
+	display: block;
+	margin: auto;
+	height: 3px;
+	width: 0px;
+	background: transparent;
+	transition: width .3s ease, background-color .3s ease;
+}
+.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading:hover:after {
+	width: 100%;
+	background: #e74c3c;
+}
+
+
+.benefits-bullets
+{
+	margin-bottom: 15px;
+}
+
+.benefits-container
+{
+	vertical-align: top;
+}
+
+a, a:focus, a:hover, a:active
+{
+	color: #eee;
+	text-decoration: none;
 }
