reorganize: removed Meet Our Attorneys section and modified style sheet

--- a/HTML/One-Pages/Lawyer/assets/css/custom.css
+++ b/HTML/One-Pages/Lawyer/assets/css/custom.css
@@ -159,4 +159,11 @@ a, a:focus, a:hover, a:active
 
 }
 
-.g-theme-bg-color-transparent-1 { background: linear-gradient(rgba(32, 40, 43, .75),rgba(136, 140, 141, 1));}
+.g-theme-bg-color-transparent-1 {
+	background: linear-gradient(rgba(32, 40, 43, .75),rgba(136, 140, 141, 1));
+}
+
+#events
+{
+	padding-bottom: 100px;
+}
