--- a/HTML/One-Pages/Lawyer/assets/css/custom.css
+++ b/HTML/One-Pages/Lawyer/assets/css/custom.css
@@ -167,3 +167,22 @@ a, a:focus, a:hover, a:active
 {
 	padding-bottom: 100px;
 }
+
+/*Work that matters*/
+#work-that-matters
+{
+	background: linear-gradient(
+							rgba(0, 0, 0, 0), rgba(0, 0, 0, .85)),
+							url("../img/6.png");
+	color: white;
+}
+#work-that-matters>h3
+{
+
+	color: white;
+}
+
+#leaders-that-captivate
+{
+	background: url("../img/16.png");
+}
