events: added new about section background and style

--- a/HTML/One-Pages/Lawyer/assets/css/custom.css
+++ b/HTML/One-Pages/Lawyer/assets/css/custom.css
@@ -181,9 +181,15 @@ a, a:focus, a:hover, a:active
 
 #leaders-that-captivate
 {
-	background: url("../img/16.png");
+	background: linear-gradient(
+							rgba(0, 0, 0, 0), rgba(0, 0, 0, .85)),url("../img/seigaiha.png");
+	color: white;
 }
+#leaders-that-captivate>h3
+{
 
+	color: white;
+}
 
 /*charts*/
 .retainer {
