--- a/src/Case/assets/css/custom.css
+++ b/src/Case/assets/css/custom.css
@@ -1,28 +1,32 @@
 /* Add here all your css styles (customizations) */
 
 /* Acsent bar custom*/
-.bar-up{
+.bar-up {
 	margin-top: 15px;
 }
+
 /*benefits fa position*/
-#benefits-fas{
+#benefits-fas {
 	font-size: 47px;
 	margin-top: -12px;
 	margin-right: 38px;
 }
-.center-font{
+
+.center-font {
 	font-size: 30px;
 }
+
 /*Awards img*/
-.rounded img{
+.rounded img {
 	height: inherit;
 	width: inherit;
 	border-radius: 500px;
 }
+
 /*master background color*/
-.g-theme-bg-color-1 { background: linear-gradient(rgba(32, 40, 43, .75),rgba(136, 140, 141, 1));}
-
-
+.g-theme-bg-color-1 {
+	background: linear-gradient(rgba(32, 40, 43, .75),rgba(136, 140, 141, 1));
+}
 
 /*changes arrow color on about section*/
 .arrow-section-block {
@@ -64,43 +68,34 @@
 	line-height: 26px;
 }
 
-
-#accordian.panel-group
-{
+#accordian.panel-group {
 	background-color: transparent;
 	color: #eee;
 }
-#benefits-description
-{
+
+#benefits-description {
 	margin-bottom: 15px;
 }
-.panel.panel-default
-{
+
+.panel.panel-default {
 	background-color: transparent;
 	border-color: transparent;
-
 }
 
-.panel-default > .panel-heading
-{
-    background-color:transparent;
-
+.panel-default > .panel-heading {
+  background-color:transparent;
 }
 
-.panel-default > .panel-heading
-{
-    background-color:transparent;
-
+.panel-default > .panel-heading {
+  background-color:transparent;
 }
-.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading
-{
+.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading {
 	display: inline-block;
 	position: relative;
 	padding-bottom: 5px;
 }
 
-.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading+.panel-collapse>.panel-body
-{
+.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading+.panel-collapse>.panel-body {
 	border: none;
 	height: 25em;
 	overflow-y: scroll;
@@ -120,19 +115,15 @@
 	background: #e74c3c;
 }
 
-
-.benefits-bullets
-{
+.benefits-bullets {
 	margin-bottom: 15px;
 }
 
-.benefits-container
-{
+.benefits-container {
 	vertical-align: top;
 }
 
-a, a:focus, a:hover, a:active
-{
+a, a:focus, a:hover, a:active {
 	color: #eee;
 	text-decoration: none;
 }
@@ -145,7 +136,6 @@ a, a:focus, a:hover, a:active
 .lawyer-style h5,
 .lawyer-style h6 {
 	color: #656B6B;
-
 }
 
 .g-theme-bg-color-transparent-1 {
@@ -155,34 +145,30 @@ a, a:focus, a:hover, a:active
 
 
 /*About section*/
-#work-that-matters
-{
+#work-that-matters {
 	background: linear-gradient(
 							rgba(0, 0, 0, 0), rgba(0, 0, 0, .85)),
 							url("../img/6.png");
 	color: white;
 }
-#work-that-matters>h3
-{
 
+#work-that-matters > h3 {
 	color: white;
 }
 
-#leaders-that-captivate
-{
+#leaders-that-captivate {
 	background: linear-gradient(
 							rgba(0, 0, 0, 0), rgba(0, 0, 0, .85)),url("../img/seigaiha.png");
 	color: white;
 }
-#leaders-that-captivate>h3
-{
 
+#leaders-that-captivate > h3 {
 	color: white;
 }
 
 /*charts*/
 .pie-container {
-  width: 70%;
+  width: 60%;
   margin: 15px auto;
 	color: black;
 }
@@ -193,67 +179,71 @@ a, a:focus, a:hover, a:active
 	color: black;
 }
 
-#chart
-{
+#chart {
 	color: black;
 }
 
 /*events gallery*/
-#events
-{
+#events {
 	padding-bottom: 100px;
 }
+
 /*Career nav-tabs*/
 .nav-tabs > li {
-    float:none;
-    display:inline-block;
-    zoom:1;
+  float:none;
+  display:inline-block;
+  zoom:1;
 }
 
 .nav-tabs {
-    text-align:center;
+  text-align:center;
 }
 
+.tab-pane h3 {
+	margin-bottom: 25px;
+  margin-top: 25px;
+}
 
-.tab-pane h3{margin-bottom: 25px;
-    margin-top: 25px;
+.nav-tabs > li.active > a {
+	color: #555;
+  cursor: default;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-bottom-color: transparent;
 }
-.nav-tabs>li.active>a{
-			color: #555;
-	    cursor: default;
-	    background-color: #fff;
-	    border: 1px solid #ddd;
-	    border-bottom-color: transparent;
-}
-.nav-tabs>li.active>a:hover {
-		color: #e74c3c;
-    cursor: default;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-bottom-color: transparent;
-}
-.nav-tabs>li>a:hover {
-		color: #e74c3c;
-    cursor: default;
-		background-color: transparent;
 
-    border-bottom-color: transparent;
-
+.nav-tabs > li.active > a:hover {
+	color: #e74c3c;
+  cursor: default;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-bottom-color: transparent;
 }
+
+.nav-tabs > li > a:hover {
+	color: #e74c3c;
+  cursor: default;
+	background-color: transparent;
+  border-bottom-color: transparent;
+}
+
 /*Event styles*/
-h5 strong a{
-	color:white;
-}
-h5 strong a:hover{
-	color:#e74c3c;
+h5 strong a {
+	color: white;
 }
 
-.valign__middle{
+h5 strong a:hover {
+	color: #e74c3c;
+}
+
+.valign__middle {
 	padding-top: 0;
 }
-.text-area-background{
+
+.text-area-background {
 	background: linear-gradient(to left ,rgba(0, 0, 0, 1),rgba(0, 0, 0, .5));
 }
-.p-scroll{
+
+.p-scroll {
 	overflow: scroll;
 }
