--- a/src/Case/assets/css/custom.css
+++ b/src/Case/assets/css/custom.css
@@ -220,10 +220,13 @@ a, a:focus, a:hover, a:active {
   border-bottom-color: transparent;
 }
 
+.nav-tabs > li > a {
+	color: #ddd;
+}
+
 .nav-tabs > li > a:hover {
 	color: #e74c3c;
-  cursor: default;
-	background-color: transparent;
+	background-color: #fff;
   border-bottom-color: transparent;
 }
 
