--- a/src/Case/assets/css/custom.css
+++ b/src/Case/assets/css/custom.css
@@ -1,267 +1,271 @@
 /* Add here all your css styles (customizations) */
 
 /* Acsent bar custom*/
+
 .bar-up {
-	margin-top: 15px;
+  margin-top: 15px;
 }
 
 /*benefits fa position*/
+
 #benefits-fas {
-	font-size: 47px;
-	margin-top: -12px;
-	margin-right: 38px;
+  font-size: 47px;
+  margin-top: -12px;
+  margin-right: 38px;
 }
 
 .center-font {
-	font-size: 30px;
+  font-size: 30px;
 }
 
 .red-icon {
-	color: Red;
-	font-size: 18px;
+  color: Red;
+  font-size: 18px;
 }
 
 /*Awards img*/
+
 .rounded img {
-	height: inherit;
-	width: inherit;
-	border-radius: 500px;
+  height: inherit;
+  width: inherit;
+  border-radius: 500px;
 }
 
 /*master background color*/
+
 .g-theme-bg-color-1 {
-	background: linear-gradient(rgba(32, 40, 43, .75),rgba(136, 140, 141, 1));
+  background: linear-gradient(rgba(32, 40, 43, .75), rgba(136, 140, 141, 1));
 }
 
 /*changes arrow color on about section*/
+
 .arrow-section-block {
-	position: relative;
-	padding: 95px 50px 65px;
-	overflow: visible;
+  position: relative;
+  padding: 95px 50px 65px;
+  overflow: visible;
 }
 
 .arrow-section-block:after {
-	content: " ";
-	display: block;
-	position: absolute;
-	left: 50%;
-	margin-left: -17px;
-	border-width: 17px;
-	border-style: solid;
-	border-right-color: transparent !important;
-	border-left-color: transparent !important;
-	z-index: 2;
-	border-color: #656B6B;
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 50%;
+  margin-left: -17px;
+  border-width: 17px;
+  border-style: solid;
+  border-right-color: transparent !important;
+  border-left-color: transparent !important;
+  z-index: 2;
+  border-color: #656B6B;
 }
 
 .g-theme-bg-color-1 .arrow-section-block:after {
-	border-color: #656B6B;
+  border-color: #656B6B;
 }
 
 .arrow-section-block.arrow-top:after {
-	bottom: 100%;
-	border-top-color: transparent;
+  bottom: 100%;
+  border-top-color: transparent;
 }
 
 .arrow-section-block.arrow-bottom:after {
-	top: 100%;
-	border-bottom-color: transparent;
+  top: 100%;
+  border-bottom-color: transparent;
 }
 
 .arrow-section-block p {
-	font-size: 16px;
-	line-height: 26px;
+  font-size: 16px;
+  line-height: 26px;
 }
 
 #accordian.panel-group {
-	background-color: transparent;
-	color: #eee;
+  background-color: transparent;
+  color: #eee;
 }
 
 #benefits-description {
-	margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .panel.panel-default {
-	background-color: transparent;
-	border-color: transparent;
+  background-color: transparent;
+  border-color: transparent;
 }
 
-.panel-default > .panel-heading {
-  background-color:transparent;
+.panel-default>.panel-heading {
+  background-color: transparent;
 }
 
-.panel-default > .panel-heading {
-  background-color:transparent;
+.panel-default>.panel-heading {
+  background-color: transparent;
 }
+
 .panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading {
-	display: inline-block;
-	position: relative;
-	padding-bottom: 5px;
+  display: inline-block;
+  position: relative;
+  padding-bottom: 5px;
 }
 
 .panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading+.panel-collapse>.panel-body {
-	border: none;
-	height: 25em;
-	overflow-y: scroll;
+  border: none;
+  height: 25em;
+  overflow-y: scroll;
 }
 
 .panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading:after {
-	content: '';
-	display: block;
-	margin: auto;
-	height: 3px;
-	width: 0px;
-	background: transparent;
-	transition: width .3s ease, background-color .3s ease;
+  content: '';
+  display: block;
+  margin: auto;
+  height: 3px;
+  width: 0px;
+  background: transparent;
+  transition: width .3s ease, background-color .3s ease;
 }
+
 .panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading:hover:after {
-	width: 100%;
-	background: #e74c3c;
+  width: 100%;
+  background: #e74c3c;
 }
 
 .benefits-bullets {
-	margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .benefits-container {
-	vertical-align: top;
+  vertical-align: top;
 }
 
 a, a:focus, a:hover, a:active {
-	color: #eee;
-	text-decoration: none;
+  color: #eee;
+  text-decoration: none;
 }
 
 /*changes header color - master*/
-.lawyer-style h1,
-.lawyer-style h2,
-.lawyer-style h3,
-.lawyer-style h4,
-.lawyer-style h5,
-.lawyer-style h6 {
-	color: #656B6B;
+
+.lawyer-style h1, .lawyer-style h2, .lawyer-style h3, .lawyer-style h4, .lawyer-style h5, .lawyer-style h6 {
+  color: #656B6B;
 }
 
 .g-theme-bg-color-transparent-1 {
-	background: linear-gradient(rgba(32, 40, 43, .75),rgba(136, 140, 141, 1));
+  background: linear-gradient(rgba(32, 40, 43, .75), rgba(136, 140, 141, 1));
 }
-
-
 
 /*About section*/
+
 #work-that-matters {
-	background: linear-gradient(
-							rgba(0, 0, 0, 0), rgba(0, 0, 0, .85)),
-							url("../img/6.png");
-	color: white;
+  background: linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, .85)), url("../img/6.png");
+  color: white;
 }
 
-#work-that-matters > h3 {
-	color: white;
+#work-that-matters>h3 {
+  color: white;
 }
 
 #leaders-that-captivate {
-	background: linear-gradient(
-							rgba(0, 0, 0, 0), rgba(0, 0, 0, .85)),url("../img/seigaiha.png");
-	color: white;
+  background: linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, .85)), url("../img/seigaiha.png");
+  color: white;
 }
 
-#leaders-that-captivate > h3 {
-	color: white;
+#leaders-that-captivate>h3 {
+  color: white;
 }
 
 /*charts*/
+
 .pie-container {
   width: 60%;
   margin: 15px auto;
-	color: black;
+  color: black;
 }
 
 .bar-container {
   width: 90%;
   margin: 15px auto;
-	color: black;
+  color: black;
 }
 
 #chart {
-	color: black;
+  color: black;
 }
 
 /*events gallery*/
+
 #events {
-	padding-bottom: 100px;
+  padding-bottom: 100px;
 }
 
 /*Career nav-tabs*/
-.nav-tabs > li {
-  float:none;
-  display:inline-block;
-  zoom:1;
+
+.nav-tabs>li {
+  float: none;
+  display: inline-block;
+  zoom: 1;
 }
 
 .nav-tabs {
-  text-align:center;
+  text-align: center;
 }
 
 .tab-pane h3 {
-	margin-bottom: 25px;
+  margin-bottom: 25px;
   margin-top: 25px;
 }
 
-.nav-tabs > li.active > a {
-	color: #555;
+.nav-tabs>li.active>a {
+  color: #555;
   cursor: default;
   background-color: #fff;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
 }
 
-.nav-tabs > li.active > a:hover {
-	color: #e74c3c;
+.nav-tabs>li.active>a:hover {
+  color: #e74c3c;
   cursor: default;
   background-color: #fff;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
 }
 
-.nav-tabs > li > a {
-	color: #ddd;
+.nav-tabs>li>a {
+  color: #ddd;
 }
 
-.nav-tabs > li > a:hover {
-	color: #e74c3c;
-	background-color: #fff;
+.nav-tabs>li>a:hover {
+  color: #e74c3c;
+  background-color: #fff;
   border-bottom-color: transparent;
 }
 
 /*Event styles*/
+
 h5 strong a {
-	color: white;
+  color: white;
 }
 
 h5 strong a:hover {
-	color: #e74c3c;
+  color: #e74c3c;
 }
 
 .valign__middle {
-	padding-top: 0;
+  padding-top: 0;
 }
 
 .text-area-background {
-	background: linear-gradient(to left ,rgba(0, 0, 0, 1),rgba(0, 0, 0, .5));
+  background: linear-gradient(to left, rgba(0, 0, 0, 1), rgba(0, 0, 0, .5));
 }
 
 .p-scroll {
-	overflow: scroll;
+  overflow: scroll;
 }
 
 .button-newPage {
-	background-color: red;
-	height:50px;
-	width:130px;
-	font-size: 20px;
-	margin-left: 10px;
-	margin-right: 10px;
-	border-radius: 65px;
+  background-color: red;
+  height: 50px;
+  width: 130px;
+  font-size: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 65px;
+  outline: none;
 }
