12-Bootstrap-4-up: changed footer color

--- a/Scrubbed_Unity/assets/custom/css/custom.css
+++ b/Scrubbed_Unity/assets/custom/css/custom.css
@@ -292,3 +292,8 @@ h5 strong a:hover {
   transform: translateY(-50%);
   -webkit-backface-visibility: hidden;
 }
+
+.nav-pad {
+  padding-left: 30px;
+  height: 60px;
+}
