3-awards-section-shift: added award badge overlap for large and medium screens. Smaller screens are not working

--- a/assets/custom/css/custom.css
+++ b/assets/custom/css/custom.css
@@ -33,6 +33,17 @@ body {
   height: inherit;
   width: inherit;
   border-radius: 500px;
+  max-width: 100%;
+}
+
+.award-container {
+  position: relative;
+  max-width: 100%
+}
+
+.award-overlapped {
+  position: absolute;
+  left: 175px;
 }
 
 /*master background color*/
