3-awards-section-shift: awards logos are aligned nicely on all devices now

--- a/assets/custom/css/custom.css
+++ b/assets/custom/css/custom.css
@@ -51,6 +51,20 @@ body {
   left: 33%;
 }
 
+@media only screen and (max-width: 760px) {
+  .mobile-image {
+    max-height: 125px;
+  }
+  .award-row {
+    max-width: inherit;
+    position: relative;
+  }
+  .award-overlapped {
+    position: relative;
+    left: 0%;
+  }
+}
+
 /*master background color*/
 
 .g-theme-bg-color-1 {
