event-image-height: chaged the max width/height to fixed

--- a/assets/custom/css/custom.css
+++ b/assets/custom/css/custom.css
@@ -425,7 +425,13 @@ h5 strong a:hover {
     display: block !important;
   }
 }
+
 .potrait {
   height: 115px;
   width: 115px;
+}
+
+.event-images {
+  max-width: 375px;
+  max-height: 210px;
 }
