--- a/assets/custom/css/custom.css
+++ b/assets/custom/css/custom.css
@@ -469,5 +469,15 @@ h5 strong a:hover {
 }
 
 .event-images {
-  max-height: 210px;
+  max-height: 300px;
+  width: auto;
+}
+
+.intern-background {
+  background: #C9D6FF;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #E2E2E2, #C9D6FF);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #E2E2E2, #C9D6FF);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
